Read from minio instead of a locally cached zip
